aplicando estilos... avances de hoy
Signed-off-by: Omar Berroterán Silva <omarberroteranlkf@gmail.com>

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,10 +44,11 @@
                             Configuracion <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a  href="{{ path('registration') }}" >Registrar</a></li>
+                            <li><a href="{{ path('registration') }}" >Registrar</a></li>
                             <li role="separator  " class="divider"></li>
                             <li><a  href="{{ path('user_index') }}">Usuarios</a></li>
                             <li role="separator" class="divider"></li>
+                            <li><a> {{ app.user.name }} :: Perfil</a></li>
                         </ul>
                     </li>
                     <!-- logout -->
