--- a/templates/negocio/index.html.twig
+++ b/templates/negocio/index.html.twig
@@ -9,10 +9,10 @@
         <a class="btn btn-primary" href="{{ path('negocio_new')  }}" role="button">Registrar Nuevo Cliente</a>
     </div>
 
-    <div class="container-fluid" style="width: 95%;">
-
-        <div class="card bg-light "  style="width: 95%;" >
-            <div class="card-body " style="width: 95%;" >
+    <!-- card -->
+    <div class="container-fluid" style="width: 99%;">
+        <div class="card bg-light "  style="width: 99%;" >
+            <div class="card-body " style="width: 100%;" >
                 <div class="card-header">Nuestros Clientes.</div>
 
                 <table class="table table-striped table-bordered table-hover w-100" id="mydatatable">
@@ -20,11 +20,10 @@
                     <tr>
                         <th>::</th>
                         <th style="width: 300px;">Nombre</th>
-                        <th style="width: 300px;">Ubicacion</th>
                         <th style="width: 300px;">website</th>
                         <th style="width: 300px;">Menu URL</th>
                         <th>Telefono</th>
-                        <th>Estatus</th>
+                        <th>Activo?</th>
                         <th> </th>
                         <th> </th>
                         <th> </th>
@@ -36,7 +35,6 @@
                     <tr>
                         <td>{{ negocio.id }}</td>
                         <td>{{ negocio.nombre }}</td>
-                        <td>{{ negocio.ubicacion }}</td>
                         <td><a href="{{ negocio.website }}" target="_blank">{{ negocio.website }} </a> </td>
                         <td><a href="{{ negocio.emenuurl }}" target="_blank">{{ negocio.emenuurl }}</a> </td>
                         <td>{{ negocio.telefono }}</td>
