--- a/templates/negocio/_form.html.twig
+++ b/templates/negocio/_form.html.twig
@@ -5,71 +5,96 @@
                 <div class="card-header mb-3">Negocio</div>
                 {{ form_start(form) }}
                 <!-- {ll{ form_widget(form) }} -->
-                <div class="form_group">
-                    <div class="col-md-12 mb-3">
-                        {{ form_row(form.nombre, {'attr': {'class': 'form-control'}}) }}
+                <div class="row">
+                    <div class="col-md-9">
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                {{ form_row(form.nombre, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                {{ form_row(form.website, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                {{ form_row(form.emenuurl, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                {{ form_row(form.correo, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
+
+                        <!--
+                        <div class="form_group">
+                        </div>
+                        <div class="form_group">
+                            <div class="col-md-12 mb-3">
+                                {{ form_row(form.foto, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
+
+                            <div class="col-md-3 mb-3">
+                                {{ form_row(form.estatus, {'attr': {'class': 'form-check-input'}}) }}
+                            </div>
+                        s-->
+
+                        <div class="row mb-3">
+                            <div class="col-md-4 mb-3">
+                                {{ form_row(form.facebook, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                {{ form_row(form.instagram, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                            <div class="col-md-4 mb-3">
+                                {{ form_row(form.twitter, {'attr': {'class': 'form-control'}}) }}
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <div class="col-md-12 mb-3" style="border: 1px;">
+                            <img src="{{ asset( '/uploads/images/' ~ form.vars.data.logo )  }}" height="200">
+                            <input type="file">
+                        </div>
                     </div>
                 </div>
-
-                <div class="row mb-3">
-                        <div class="col-md-6 mb-3">
-                            {{ form_row(form.website, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            {{ form_row(form.emenuurl, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                </div>
-
-                <div class="row ">
-                        <div class="col-md-6 mb-3">
-                            {{ form_row(form.ubicacion, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                        <div class="col-md-6 mb-3">
-                            {{ form_row(form.googleMap, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                </div>
-
-                <div class="row mb-3">
-                    <div class="form_group">
-                        <div class="col-md-12 mb-3">
-                            {{ form_row(form.correo, {'attr': {'class': 'form-control'}}) }}
-                        </div>
+                <div class="form-group">
+                    <div>
+                        <label for="table" class="required">Ubicaciones</label>
+                        <table class="records_list table table-striped table-bordered table-hover w-100"
+                               id="myUbicacionTable" style="border-width: 2px;border: #222222">
+                            <thead>
+                            <tr>
+                                <th scope="col">#</th>
+                                <th scope="col">Nombre</th>
+                                <th scope="col">Direccion</th>
+                                <th scope="col">Coordenadas</th>
+                                <th scope="col">Telefono</th>
+                                <th scope="col">Contacto</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <th scope="row">1</th>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                <td>@mdo</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">2</th>
+                                <td>Jacob</td>
+                                <td>Thornton</td>
+                                <td>@fat</td>
+                            </tr>
+                            <tr>
+                                <th scope="row">3</th>
+                                <td colspan="2">Larry the Bird</td>
+                                <td>@twitter</td>
+                            </tr>
+                            </tbody>
+                        </table>
                     </div>
-
-                    <div class="form_group">
-                        <div class="col-md-12 mb-3">
-                            {{ form_row(form.telefono, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                    </div>
-                </div>
-
-                <!--
-                    <div class="form_group">
-                        <div class="col-md-12 mb-3">
-                            {{ form_row(form.logo, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                    </div>
-                    <div class="form_group">
-                        <div class="col-md-12 mb-3">
-                            {{ form_row(form.foto, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                    </div>
-
-                    s-->
-
-                <div class="row mb-3">
-                        <div class="col-md-3 mb-3">
-                            {{ form_row(form.facebook, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                        <div class="col-md-3 mb-3">
-                            {{ form_row(form.instagram, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                        <div class="col-md- mb-3">
-                            {{ form_row(form.twitter, {'attr': {'class': 'form-control'}}) }}
-                        </div>
-                        <div class="col-md-2 mb-3">
-                            {{ form_row(form.estatus, {'attr': {'class': 'form-check-input'}}) }}
-                        </div>
                 </div>
 
                 <div class="form-group">
@@ -80,6 +105,11 @@
                         </button>
 
                         <a class="btn btn-secondary" href="{{ path('negocio_index') }}" role="button">Cancelar</a>
+                        |
+                        <a class="btn btn-secondary" href="{{ path('categorias_index') }}" role="button">Inactivar</a>
+                        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal">Agregar ubicacion</button>
+
+
                     </div>
                 </div>
 
@@ -95,4 +125,67 @@
 
     <!--fin </div> -->
 
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Agregando ubicación</h4>
+                </div>
+                <div class="modal-body">
+                    <!-- body modal -->
+
+                    <form class="form" action="/action_page.php">
+                        <!-- form -->
+                        <div class="form-group row">
+                            <label class="col-sm-2 col-form-label" for="email">Nombre:</label>
+                            <div class="col-sm-10">
+                            <input type="text" class="form-control" id="email">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-2 col-form-label" for="pwd">Direccion:</label>
+                            <div class="col-sm-10">
+                            <input type="text" class="form-control" id="pwd">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-2 col-form-label" for="pwd">Coordenadas:</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="pwd">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-2 col-form-label" for="pwd">Telefono:</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="pwd">
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-2 col-form-label" for="pwd">Contacto:</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="pwd">
+                            </div>
+                        </div>
+
+                    </form>
+                    <!-- end body modal -->
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fa fa-btn fa-user"></i>Guardar
+                    </button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+                </div>
+            </div>
+            <!-- End Modal Content -->
+        </div>
+    </div>
+    <!-- End Modal-->
+
 </div>
+
+
