--- a/templates/producto/index.html.twig
+++ b/templates/producto/index.html.twig
@@ -19,43 +19,33 @@
 
                     <table class="records_list table table-striped table-bordered table-hover w-100" id="mydatatable">
 
-                        <thead>
+                        <thead class="thead-dark">
                         <tr>
                             <th>Id</th>
-                            <th>Idcategoria</th>
                             <th>Nombre</th>
                             <th>Description</th>
                             <th>Precio</th>
-                            <th>Activo</th>
-                            <th>Promocion</th>
-
-                            <th>FechaAlta</th>
-                            <th>FechaModificacion</th>
-                            <th>UsuarioAlta</th>
-                            <th>UsuarioBaja</th>
-
-                            <th>actions</th>
+                            <th>Activo?</th>
+                            <th>En Promocion?</th>
+                            <th>::</th>
                         </tr>
                         </thead>
                         <tbody>
                         {% for producto in productos %}
                             <tr>
                                 <td>{{ producto.id }}</td>
-                                <td>{{ producto.idcategoria }}</td>
+
                                 <td>{{ producto.nombre }}</td>
                                 <td>{{ producto.Description }}</td>
                                 <td>{{ producto.precio }}</td>
                                 <td>{{ producto.activo ? 'Yes' : 'No' }}</td>
                                 <td>{{ producto.promocion ? 'Yes' : 'No' }}</td>
 
-                                <td>{{ producto.fechaAlta ? producto.fechaAlta|date('Y-m-d') : '' }}</td>
-                                <td>{{ producto.fechaModificacion ? producto.fechaModificacion|date('Y-m-d') : '' }}</td>
-                                <td>{{ producto.usuarioAlta }}</td>
-                                <td>{{ producto.usuarioBaja }}</td>
-
                                 <td>
-                                    <a href="{{ path('producto_show', {'id': producto.id}) }}">show</a>
-                                    <a href="{{ path('producto_edit', {'id': producto.id}) }}">edit</a>
+                                    <a href="{{ path('producto_show', {'id': producto.id}) }}" class="btn btn-secondary" role="button">Editar</a>
+                                    <a href="{{ path('producto_edit', {'id': producto.id}) }}" class="btn btn-secondary" role="button">Inactivar</a>
+                                    <a href="{{ path('producto_edit', {'id': producto.id}) }}" class="btn btn-secondary" role="button">En promocion</a>
+                                    <a href="{{ path('producto_edit', {'id': producto.id}) }}" class="btn btn-secondary" role="button">Cargar una imagen</a>
                                 </td>
                             </tr>
                         {% else %}
