--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -113,6 +113,18 @@
                     <i class="fab fa-github"></i>
                 </a>
 
+                    <a
+                            href="#"
+                            style="color: #fff;"
+                    >
+                        <div class="card mb-3" style="background-color: #e8542e">
+                            <div class="card-body" style="padding: 0;">
+                                <img src="https://i.imgur.com/02VeCz0.png" height="40" />
+                                Connect with Auth0
+                            </div>
+                        </div>
+                    </a>
+
             </form>
             <!-- Form -->
 
