--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,28 +1,67 @@
 <div class="container">
-    <div class="row">
-        <div class="col-md-10 ml-md-auto">
-            <div class="card bg-light mb-3 mt-5" style="width: 800px">
-                <div class="card-body">
-                    <div class="card-header mb-3">Usuario</div>
-                    {{ form_start(form) }}
-                    {{ form_widget(form) }}
+    <div class="">
+        <div class="card bg-light mb-3 mt-5">
+            <div class="card-body">
+                <div class="card-header mb-3">Usuario</div>
+                {{ form_start(form) }}
 
-                    <div class="form-group">
-                        <div class="col-md-8 col-md-offset-4" style="margin-top:5px;">
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fa fa-btn fa-user"></i>Guardar
-                            </button>
-                            <a class="btn btn-secondary" href="{{ path('negocio_index') }}" role="button">Cancelar</a>
+                <div class="row mb-3">
+                    <div class="form_group">
+                        <div class="col-md-12 mb-3">
+                            {{ form_row(form.name, {'attr': {'class': 'form-control'}}) }}
                         </div>
                     </div>
 
-                    {{ form_rest(form) }}
-                    <div class="my-custom-class-for-errors">
-                        {{ form_errors(form) }}
+                    <div class="form_group">
+                        <div class="col-md-12 mb-3">
+                            {{ form_row(form.email, {'attr': {'class': 'form-control'}}) }}
+                        </div>
                     </div>
-                    {{ form_end(form) }}
                 </div>
+
+                <div class="row mb-3">
+                    <div class="col-md-6 mb-3">
+                        {{ form_row(form.password, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+
+                <div class="row mb-3">
+                    <div class="col-md-6 mb-3">
+                        {{ form_row(form.tipo, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        {{ form_row(form.plan, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                    <div class="col-md-12 mb-3">
+                        {{ form_row(form.idrol, {'attr': {'class': 'form-control'}}) }}
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-8 col-md-offset-4" style="margin-top:5px;">
+
+                        <button type="submit" class="btn btn-primary">
+                            <i class="fa fa-btn fa-user"></i>Guardar
+                        </button>
+
+                        <a class="btn btn-secondary" href="{{ path('negocio_index') }}" role="button">Cancelar</a>
+                        |
+                        <a class="btn btn-secondary" href="{{ path('categorias_index') }}" role="button">Inactivar</a>
+
+
+                    </div>
+                </div>
+
+                {{ form_rest(form) }}
+
+                <div class="my-custom-class-for-errors">
+                    {{ form_errors(form) }}
+                </div>
+                {{ form_end(form) }}
             </div>
         </div>
     </div>
+
+    <!--fin </div> -->
+
 </div>
